--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -49,33 +51,22 @@ body {
 
 .gui-container {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  z-index: 1;
+  margin-right: 10px;
+  margin-top: -1px;
 }
 
 .heart-icons {
   display: flex;
   align-items: center;
-  margin-top: 20px;
-  gap: 8px;
+  gap: 5px;
 }
 
 .heart-icon {
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
   background: url("https://i.pinimg.com/originals/93/27/c7/9327c75c610c9a82c74b23eac974dbe6.png")
     no-repeat center center;
   background-size: contain;
-  transition: transform 0.2s ease, background-size 0.2s ease;
-}
-
-.heart-icon:hover {
-  transform: scale(1.2);
-}
-
-.heart-icon:last-child {
-  margin-right: 0;
 }
 
 @media (max-width: 768px) {
